tests/ui/traits/new-solver/coherence/trait_ref_is_knowable-norm-overflow.stderr
error[E0119]: conflicting implementations of trait `Trait` for type `<LocalTy as Overflow>::Assoc`
  --> $DIR/trait_ref_is_knowable-norm-overflow.rs:17:1
   |
LL | impl<T: Copy> Trait for T {}
   | ------------------------- first implementation here
LL | struct LocalTy;
LL | impl Trait for <LocalTy as Overflow>::Assoc {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `<LocalTy as Overflow>::Assoc`
   |
   = note: downstream crates may implement trait `std::marker::Sized` for type `<LocalTy as Overflow>::Assoc`
   = note: downstream crates may implement trait `std::marker::Copy` for type `<LocalTy as Overflow>::Assoc`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0119`.
